--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,131 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #f0f0f0;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.background {
+  position: relative;
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  width: 100%;
+  background-color: white;
+  overflow-y: auto;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.background::-webkit-scrollbar {
+  display: none;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.nav {
+  font-family: 'goorm-sans-bold';
+  z-index: 1;
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  gap: 48px;  
+  align-items: center;
+  padding: 0 20px;
+  background-color: white;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  width: 100%;
+  box-shadow: 0px -1px 4px rgba(0, 0, 0, 0.2);
+}
+
+@media screen and (min-width: 400px) {
+  .nav {
+    width: 400px;
+  }      
+}
+
+.nav-element {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  justify-content: center;
+  align-items: center;
+}
+
+.page {
+  padding-bottom: 64px; 
+}
+
+#home {
+}
+  
+.banner {
+  overflow-x: auto;
+  font-family: 'goorm-sans-bold';
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  width: 100%;
+}
+
+.banner::-webkit-scrollbar {
+  display: none;
+}
+
+img {
+  pointer-events: none;
+  user-select: none;
+}
+
+.slide {
+  font-family: 'LeeSeoyun';
+  display: flex;
+  gap: 4px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  width: 100%;  
+  padding: 20px;
+}
+
+.slide-container {
+  display: flex;
+  gap: 4px;
+  justify-content: left;
+  align-items: center;
+  height: 100%;
+  overflow-x: auto;
+}
+
+.slide-element {
+  display: flex;
+  flex-direction: column;
+  word-break: keep-all;
+}
+
+@font-face {
+  font-family: 'LeeSeoyun';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2202-2@1.0/LeeSeoyun.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'goorm-sans-bold';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2408@1.0/goorm-sans-bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@media screen and (min-width: 400px) {
+  .background {
+    width: 400px;
+    height: 100%;
+  }       
 }
