--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,31 @@ html, body {
   background-color: #f0f0f0;
 }
 
+.top {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  padding: 12px;
+  background-color: white;
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.logo {
+  font-family: 'LeeSeoyun';
+  font-size: 24px;
+  color: tomato;
+}
+
+.top-icon-container {
+  display: flex;
+  gap: 12px;
+  font-size: 24px;
+  margin-left: auto;
+  justify-content: center;
+  align-items: center;
+}
+
+
 .background {
   position: relative;
   margin-right: auto;
